loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:14: error: Boolean does not take parameters
    else (nbbiscuit<3){
                      ^